--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,36 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenCentral()
         jcenter()
     }
+
+
+    // Define versions in a single place
+    ext {
+
+        // Sdk and tools
+        targetSdkVersion = 25
+        compileSdkVersion = 25
+        buildToolsVersion = '25.0.3'
+
+        support_library_version = "25.3.1"
+        play_services_version = "10.2.4"
+        jackson_version = "2.8.0"
+        retrofit_version = "2.1.0"
+        gson = "2.4"
+        guava = "18.0"
+        dagger_version = "2.10"
+        rx_java = "1.3.0"
+        rx_android = "1.2.1"
+        rx_relay = "1.2.0"
+        timber = "4.4.0"
+        rx_ble = "1.3.3"
+
+        //DBFlow
+        dbflow_version = "3.1.1"
+        sqlcipher_version = "3.5.7"
+
+    }
+
 }
