--- a/BankApp/src/main/AndroidManifest.xml
+++ b/BankApp/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.lozasolutions.bankapp">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
 
     <permission
         android:name="com.lozasolutions.bankapp.requestdata"
@@ -11,6 +13,7 @@
         android:protectionLevel="signature" />
 
     <application
+        android:name="com.lozasolutions.application.BankApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name">
