--- a/MainApp/build.gradle
+++ b/MainApp/build.gradle
@@ -58,21 +58,21 @@ dependencies {
     compile "com.android.support:appcompat-v7:${rootProject.support_library_version}"
 
     //DAGGER 2
-    compile "com.google.dagger:dagger-android:${rootProject.dagger_version}"
-    compile "com.google.dagger:dagger-android-support:${rootProject.dagger_version}" // if you use the support libraries
+    annotationProcessor "com.google.dagger:dagger-compiler:${rootProject.dagger_version}"
     annotationProcessor "com.google.dagger:dagger-android-processor:${rootProject.dagger_version}"
+    compile "com.google.dagger:dagger:${rootProject.dagger_version}"
+    compile "com.google.dagger:dagger-android-support:${rootProject.dagger_version}"
 
-    // Retrofitdagger_version
-    compile "com.squareup.retrofit2:retrofit:${rootProject.retrofit_version}"
-    compile "com.squareup.retrofit2:converter-jackson:${rootProject.retrofit_version}"
-    compile "com.squareup.retrofit2:adapter-rxjava:${rootProject.retrofit_version}"
+    compile "com.jakewharton.timber:timber:${rootProject.timber}"
+
     // RxJava
+    compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.2.3'
-    //Jackson
-    compile "com.fasterxml.jackson.core:jackson-core:${rootProject.jackson_version}"
-    compile "com.fasterxml.jackson.core:jackson-annotations:${rootProject.jackson_version}"
-    compile "com.fasterxml.jackson.core:jackson-databind:${rootProject.jackson_version}"
+
 
     //Butterknife
-    compile 'com.jakewharton:butterknife:7.0.1'
+    compile "com.jakewharton:butterknife:${rootProject.butterknife}"
+    annotationProcessor "com.jakewharton:butterknife-compiler:${rootProject.butterknife}"
+
+    compile 'com.google.code.gson:gson:2.7'
 }
