--- a/MainApp/src/main/AndroidManifest.xml
+++ b/MainApp/src/main/AndroidManifest.xml
@@ -5,13 +5,14 @@
     <uses-permission android:name="com.lozasolutions.bankapp.requestdata" android:protectionLevel="signature" />
 
     <application
+        android:name="com.lozasolutions.mainapp.base.MainApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
+
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:name=".ui.mainscreen.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
