--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ allprojects {
     repositories {
         mavenCentral()
         jcenter()
+        maven {url "https://clojars.org/repo/"}
     }
 
 
@@ -28,12 +29,13 @@ allprojects {
         retrofit_version = "2.1.0"
         gson = "2.4"
         guava = "18.0"
-        dagger_version = "2.10"
+        dagger_version = "2.11"
         rx_java = "1.3.0"
         rx_android = "1.2.1"
         rx_relay = "1.2.0"
         timber = "4.4.0"
         rx_ble = "1.3.3"
+        butterknife = "8.7.0"
 
         //DBFlow
         dbflow_version = "3.1.1"
